--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,11 @@
   <dt>Last.fm</dt><dd><a href="http://www.last.fm/user/eliium" target="_blank">eliium</a></dd>
 
   <dt>Github</dt><dd><a href="https://github.com/dteli" target="_blank">dteli</a></dd>
+  <dt>LinkedIn</dt><dd><a href="https://www.linkedin.com/in/dteli" target="_blank">dteli</a></dd>
 </dl>
 
-
-<p style="font-size: 250%; margin: 0.2em auto 0.2em; text-align: center">&nearhk;</p>
+<p>&nbsp;</p>
+<!-- <p style="font-size: 250%; margin: 0.2em auto 0.2em; text-align: center">&nearhk;</p> -->
 
 
 <!-- <address> -->
@@ -29,13 +30,14 @@
     <!-- <dt>post</dt><dd>Martin Luther Kinglaan 528</dd>
     <dt class="blankdt">&nbsp;</dt><dd>1111 LW Diemen</dd>
     <dt class="blankdt">&nbsp;</dt><dd>Netherlands</dd> -->
-    <dt>phone</dt><dd><a href="tel:+13177825328">+1 317 SUBJECT</a></dd>
+    <dt>phone</dt><dd><a href="tel:+13177825328">+1 317 782.5328</a></dd>
+    <!-- <dt>&nbsp;</dt><dd><span style="color:#888888;font-size:0.6em">+1&nbsp;&nbsp;317&nbsp;&nbsp;SUB.JECT</span></dd> -->
     <!-- <dt class="blankdt">&nbsp;</dt><dd><a href="tel:+18082008440">+1 808 200 8440</a></dd> -->
 </dl>
 <!-- </address> -->
 
-
-<p style="font-size: 250%; margin: 0.2em auto 0.2em; text-align: center">&swarhk;</p>
+<p>&nbsp;</p>
+<!-- <p style="font-size: 250%; margin: 0.2em auto 0.2em; text-align: center">&swarhk;</p> -->
 
 
 <dl>
