contact info update; post

--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,10 @@
 
 <!-- <address> -->
 <dl>
-    <!-- <dt>post</dt><dd>Martin Luther Kinglaan 528</dd>
-    <dt class="blankdt">&nbsp;</dt><dd>1111 LW Diemen</dd>
-    <dt class="blankdt">&nbsp;</dt><dd>Netherlands</dd> -->
-    <dt>phone</dt><dd><a href="tel:+13177825328">+1 317 782.5328</a></dd>
+    <dt>post</dt><dd>PO Box 208</dd>
+    <dt class="blankdt">&nbsp;</dt><dd>Dryden, NY 13053</dd>
+    <dt class="blankdt">&nbsp;</dt><dd>United States of America</dd>
+    <dt>phone</dt><dd><a href="tel:+13177825328">+1 317 782 5328</a></dd>
     <!-- <dt>&nbsp;</dt><dd><span style="color:#888888;font-size:0.6em">+1&nbsp;&nbsp;317&nbsp;&nbsp;SUB.JECT</span></dd> -->
     <!-- <dt class="blankdt">&nbsp;</dt><dd><a href="tel:+18082008440">+1 808 200 8440</a></dd> -->
 </dl>
