fixing some issues on index page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </script>
 
 
-<h1><em>Hello, I'm Eli T. Drumm, and this is my website.</em></h1>
+<h1><em>Hello, I'm Eli T. Drumm, and this is my website</em></h1>
 
 
 <div id="groundcap">
