--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
   <!-- <dt>Google+</dt><dd><a href="http://google.com/+EliTDrumm" target="_blank">+Eli T. Drumm</a></dd> -->
   <dt>Instagram</dt><dd><a href="http://instagram.com/dte.li" target="_blank">@dte.li</a></dd>
   <dt>Last.fm</dt><dd><a href="http://www.last.fm/user/eliium" target="_blank">eliium</a></dd>
+  <dt>Discogs</dt><dd><a href="https://www.discogs.com/user/dte.li" target="_blank">dte.li</a></dd>
 
   <dt>Github</dt><dd><a href="https://github.com/dteli" target="_blank">dteli</a></dd>
   <dt>LinkedIn</dt><dd><a href="https://www.linkedin.com/in/dteli" target="_blank">dteli</a></dd>
@@ -30,7 +31,7 @@
     <!-- <dt>post</dt><dd>PO Box 208</dd> -->
     <!-- <dt class="blankdt">&nbsp;</dt><dd>Dryden, NY 13053</dd> -->
     <!-- <dt class="blankdt">&nbsp;</dt><dd>United States of America</dd> -->
-    <dt>phone</dt><dd><a href="tel:+13177825328">+1 317 782 5328</a></dd>
+    <dt>phone</dt><dd><a href="tel:+18082008440">+1 808 200 8440</a></dd>
     <!-- <dt>&nbsp;</dt><dd><span style="color:#888888;font-size:0.6em">+1&nbsp;&nbsp;317&nbsp;&nbsp;SUB.JECT</span></dd> -->
     <!-- <dt class="blankdt">&nbsp;</dt><dd><a href="tel:+18082008440">+1 808 200 8440</a></dd> -->
 </dl>
