adding images without symlink (long story)

--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
 
 
 <dl>
-  <dt>PGP key;</dt><dd><a href="/aanvullend/0xFCE46F209CFBCE94.asc">0xFCE46F209CFBCE94.asc</a></dd>
+  <dt>PGP key;</dt><dd><a href="/aanvullend/etd.asc">etd.asc</a></dd>
   <!-- <dt>PGP key;</dt><dd><a href="etd.asc">etd.asc</a></dd> -->
-  <dt>fingerprint</dt><dd><pre style="font-size:120%; margin: 0 0 0.1em 1%;">5FC0 5007 49F2 2B2E 0424</pre></dd>
-  <dt class="blankdt">&nbsp;</dt><dd><pre style="font-size: 120%; margin: 0 0 0.4em 1%;">5292 FCE4 6F20 9CFB CE94</pre></dd>
+  <dt>fingerprint</dt><dd><pre style="font-size:120%; margin: 0 0 0.1em 1%;">B101 B1B3 0ACB E368 B53B</pre></dd>
+  <dt class="blankdt">&nbsp;</dt><dd><pre style="font-size: 120%; margin: 0 0 0.4em 1%;">D8BF 86EB AE8D FB9C 32CF</pre></dd>
 </dl>
