small updates towards 4.0

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <dt>email (& Hangouts)</dt><dd><a href="mailto:etd@dte.li">etd@dte.li</a></dd>
   <!-- <dt>Google Hangouts</dt><dd><a href="xmpp:chartrex@gmail.com">etd@dte.li</a></dd> -->
   <dt>KakaoTalk</dt><dd>dteli</dd>
-  <dt>Snapchat</dt><dd><a href="/aanvullend/snapcode.png">aoeui</a></dd>
+  <!-- <dt>Snapchat</dt><dd><a href="/aanvullend/snapcode.png">aoeui</a></dd> -->
   <dt>Facebook Messenger</dt><dd><i>linked to phone</i></dd>
   <!-- <dt>Skype</dt><dd><a href="skype:dte.li">dte.li</a></dd> -->
 </dl>
