preparing for big merge from sie

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <dt>Last.fm</dt><dd><a href="http://www.last.fm/user/eliium" target="_blank">eliium</a></dd>
   <dt>Discogs</dt><dd><a href="https://www.discogs.com/user/dte.li" target="_blank">dte.li</a></dd>
 
-  <dt>Github</dt><dd><a href="https://github.com/dteli" target="_blank">dteli</a></dd>
+  <dt>Github</dt><dd><a href="https://github.com/etdr" target="_blank">dteli</a></dd>
   <dt>LinkedIn</dt><dd><a href="https://www.linkedin.com/in/dteli" target="_blank">dteli</a></dd>
 </dl>
 
